--- a/src/app/dev/platforms/desktop/DevToys.MauiBlazor/Components/GuiTool/UIElementPresenter.razor
+++ b/src/app/dev/platforms/desktop/DevToys.MauiBlazor/Components/GuiTool/UIElementPresenter.razor
@@ -7,6 +7,9 @@
     {
         switch (UIElement)
         {
+            case IUIStack stack:
+                <UIStackPresenter UIStack="@stack" />
+                break;
             case IUIButton button:
                 <UIButtonPresenter UIButton="@button" />
                 break;
